# juniper-config-converter

./: .gitignore  LICENSE  README.md
crates/jcc/: Cargo.toml  config_10.txt  config_10_set.txt  config_11.txt  config_11_set.txt  config_12_set.txt  config_14_set.txt  config_15.txt  config_16.txt  config_17.txt  config_3.txt  config_4.txt  config_5_set.txt  config_6.txt  config_8_set.txt  config_9.txt  config_9_set.txt
crates/jcc-cli/: Cargo.toml
crates/jcc-cli/src/: main.rs
crates/jcc/benches/: benchmarks.rs
crates/jcc/src/: configwriter.rs  lexer.rs  lib.rs  utils.rs
crates/jcc/tests/: integration_tests.rs
crates/jcc/tests/data/: config_1.txt  config_12.txt  config_13.txt  config_13_set.txt  config_14.txt  config_15_set.txt  config_16_set.txt  config_17_set.txt  config_18.txt  config_18_set.txt  config_19.txt  config_19_set.txt  config_1_set.txt  config_20.txt  config_20_set.txt  config_21.txt  config_21_set.txt  config_22.txt  config_22_set.txt  config_3_set.txt  config_4_set.txt  config_5.txt  config_6_set.txt  config_7.txt  config_7_set.txt  config_8.txt  config_9.txt  config_9_set.txt
