[package]
name = "jcc-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for jcc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.0", features = ["derive"] }
jcc = "0..2.0"

