[package]
name = "jcc"
version = "0.1.0"
edition = "2021"
description = "Convert Juniper configurations to set-style"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
clap = { version = "4.4.0", features = ["derive"] }
