[package]
name = "jcc"
version = "0.2"
edition = "2021"
description = "Convert Juniper configurations to set-style"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
criterion = "0.5.1"


[[bench]]
name = "benchmarks"
harness = false